# folio

./: .gitignore  package-lock.json  package.json  tsconfig.renderer.json
src/: index.html  renderer.js  renderer.js.map  renderer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/pdfium/: README.md
src-tauri/src/: lib.rs  main.rs
src/types/: index.ts
