[package]
name = "folio"
version = "0.4.0"
edition = "2021"
description = "Folio — a clean PDF reader and organiser"
default-run = "folio"

[lib]
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "folio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
base64      = "0.22"
dirs        = "5"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
